trying to add more features to system

--- a/queries exp expanded features 2.ipynb
+++ b/queries exp expanded features 2.ipynb
@@ -4,16 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "change it to not use the document when looking for the link quality, to see how much that is actually helping"
+    "Working on adding a lot of features just to see if it can get the score up regardless of how complicated or where the data is coming from\n",
+    "\n",
+    "Features that I will be adding\n",
+    "\n",
+    "* Taget given surface counts\n",
+    "* words from the target and source document\n",
+    "  * possible back prop into these vectors, idea is to replace tf-idf with some nn and back prop here\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +59,7 @@
     "import theano\n",
     "import numpy as np\n",
     "from helpers import SimpleMaxingLayer, SimpleAverageLayer\n",
-    "from wordvecs import WordVectors, EmbeddingLayer\n",
+    "from wordvecs import WordVectors, EmbeddingLayer, WordTokenizer\n",
     "import json\n",
     "import re\n",
     "\n",
@@ -55,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -63,6 +79,28 @@
    "source": [
     "with open('/data/matthew/external-wiki2.json') as f:\n",
     "    queries = json.load(f)['queries']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9915"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(queries)"
    ]
   },
   {
@@ -75,32 +113,10 @@
     {
      "data": {
       "text/plain": [
-       "9915"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(queries)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "8917"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,15 +127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "wordvectors = WordVectors(\n",
-    "    fname=\"/data/matthew/enwiki-20141208-pages-articles-multistream-links5-output1.bin\",\n",
-    "    redir_fname='/data/matthew/enwiki-20141208-pages-articles-multistream-redirects5.json',\n",
+    "    fname=\"/data/matthew/enwiki-20141208-pages-articles-multistream-links7-output1.bin\",\n",
+    "    redir_fname='/data/matthew/enwiki-20141208-pages-articles-multistream-redirect7.json',\n",
     "    negvectors=False,\n",
     "    sentence_length=200,\n",
     ")\n",
@@ -128,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -149,16 +165,28 @@
     {
      "data": {
       "text/plain": [
-       "4613263"
+       "4056055"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(wordvectors.vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('/data/matthew/enwiki-20141208-pages-articles-multistream-surface-counts7.json') as f:\n",
+    "    surface_counts = json.load(f)"
    ]
   },
   {
@@ -174,20 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def PreProcessedQueries(wikipedia_dump_fname, wordvec=wordvectors, queries=queries, redirects=page_redirects):\n",
+    "def PreProcessedQueries(wikipedia_dump_fname, vectors=wordvectors, queries=queries, redirects=page_redirects, surface=surface_counts):\n",
     "    \n",
     "    get_words = re.compile('[^a-zA-Z0-9 ]')\n",
     "    get_link = re.compile('.*?\\[(.*?)\\].*?')\n",
     "    \n",
+    "    wordvec = WordTokenizer(vectors, sentence_length=200)\n",
+    "    documentvec = WordTokenizer(vectors, sentence_length=1)\n",
+    "    \n",
     "    queried_pages = set()\n",
     "    for docs, q in queries.iteritems():\n",
-    "        wordvec.tokenize(docs, length=200)\n",
+    "        wordvec.tokenize(docs)\n",
     "        for sur, v in q.iteritems():\n",
     "            wrds_sur = get_words.sub(' ', sur)\n",
     "            wordvec.tokenize(wrds_sur)\n",
@@ -197,13 +228,14 @@
     "                wrds = get_words.sub(' ', link)\n",
     "                wordvec.tokenize(wrds)\n",
     "                tt = WikiRegexes.convertToTitle(link)\n",
-    "                wordvec.get_location(tt)\n",
+    "                documentvec.get_location(tt)\n",
     "                queried_pages.add(tt)\n",
     "\n",
     "    added_pages = set()\n",
     "    for title in queried_pages:\n",
     "        if title in redirects:\n",
     "            #wordvec.tokenize(self.redirects[title])\n",
+    "            documentvec.get_location(redirects[title])\n",
     "            added_pages.add(redirects[title])\n",
     "    queried_pages |= added_pages\n",
     "\n",
@@ -222,14 +254,17 @@
     "    rr = redirects\n",
     "    rq = queried_pages\n",
     "    rc = page_content\n",
+    "    rs = surface\n",
     "\n",
     "    class PreProcessedQueriesCls(object):\n",
     "        \n",
     "        wordvecs = wordvec\n",
+    "        documentvecs = documentvec\n",
     "        queries = queries\n",
     "        redirects = rr\n",
     "        queried_pages = rq\n",
     "        page_content = rc\n",
+    "        surface_counts = rs\n",
     "        \n",
     "        \n",
     "    return PreProcessedQueriesCls"
@@ -237,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -248,18 +283,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4056055"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(wordvectors.vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +319,7 @@
     "    def __init__(self):\n",
     "        self.sentence_length = self.wordvecs.sentence_length\n",
     "        self.document_length = 100\n",
-    "        self.num_words_to_use_conv = 5\n",
+    "        self.num_words_to_use_conv = 2\n",
     "        \n",
     "        self._setup()       \n",
     "        \n",
@@ -291,6 +337,7 @@
     "        \n",
     "        \n",
     "        self.embedding_W = theano.shared(self.wordvecs.get_numpy_matrix().astype(theano.config.floatX))\n",
+    "        self.embedding_W_docs = theano.shared(self.documentvecs.get_numpy_matrix()).astype(theano.config.floatX)\n",
     "        \n",
     "#         self.document_l = lasagne.layers.InputLayer(\n",
     "#             (None,self.document_length), \n",
@@ -535,7 +582,7 @@
     "        \n",
     "        self.target_embedding_l = EmbeddingLayer(\n",
     "            lasagne.layers.reshape(self.target_input_l, ([0], 1)),\n",
-    "            W=self.embedding_W,\n",
+    "            W=self.embedding_W_docs,\n",
     "            add_word_params=False,\n",
     "        )\n",
     "        \n",
@@ -801,7 +848,7 @@
     "                        continue\n",
     "                    isGold = target == targets['gold']\n",
     "                    #cnt = self.page_content.get(WikiRegexes.convertToTitle(target))\n",
-    "                    cnt = self.wordvecs.get_location(WikiRegexes.convertToTitle(target))\n",
+    "                    cnt = self.documentvecs.get_location(WikiRegexes.convertToTitle(target))\n",
     "                    if cnt is None:\n",
     "                        # were not able to find this wikipedia document\n",
     "                        # so just ignore tihs result since trying to train on it will cause\n",
@@ -868,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -899,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -924,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -935,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -957,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -966,9 +1013,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0709250393844\n",
-      "CPU times: user 3min 3s, sys: 958 ms, total: 3min 3s\n",
-      "Wall time: 24.8 s\n"
+      "0.17164887266\n",
+      "CPU times: user 12min 20s, sys: 6.84 s, total: 12min 27s\n",
+      "Wall time: 1min 49s\n"
      ]
     }
    ],
@@ -1019,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1027,29 +1074,64 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 0.17401368712900725),\n",
-       " (1, 0.14072583350071299),\n",
-       " (2, 0.12462031807655902),\n",
-       " (3, 0.11437517436310551),\n",
-       " (4, 0.107035268253385),\n",
-       " (5, 0.10117845601028351),\n",
-       " (6, 0.096336938713979886),\n",
-       " (7, 0.092676932742251236),\n",
-       " (8, 0.089416179639050589),\n",
-       " (9, 0.086551310462437608),\n",
-       " ('testing run', 0.13897210478135949),\n",
-       " ('training state', (2870, 0.39686411149825784)),\n",
-       " ('testing state', (2865, 0.3193717277486911)),\n",
-       " (0, 0.084750370036393866)]"
+       "[(0, 0.16285123519429176),\n",
+       " (1, 0.15650010508878154),\n",
+       " (2, 0.15128908935854388),\n",
+       " (3, 0.14684929944863667),\n",
+       " (4, 0.14302969113304212),\n",
+       " (5, 0.13956291878583546),\n",
+       " (6, 0.13648708590690492),\n",
+       " (7, 0.13373983576785065),\n",
+       " (8, 0.13115703365323564),\n",
+       " (9, 0.12884747222443393),\n",
+       " ('testing run', 0.15971937893696217),\n",
+       " ('training state', (2833, 0.2181433109777621)),\n",
+       " ('testing state', (2829, 0.19406150583244963))]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "exp_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries_exp.num_training_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in xrange(10):\n",
+    "    res = (i, queries_exp.compute_batch())\n",
+    "    print res\n",
+    "    exp_results.append(res)"
    ]
   },
   {
