added the surface count features to the target vector for now

--- a/queries exp expanded features 1.ipynb
+++ b/queries exp expanded features 1.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -248,22 +248,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4613263"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(wordvectors.vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/scan_module/scan_perform_ext.py:135: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility\n",
+      "  from scan_perform.scan_perform import *\n"
+     ]
+    }
+   ],
    "source": [
     "class EntityVectorLinkExp(basePreProcessedQueries):\n",
     "    \n",
@@ -761,6 +781,7 @@
     "        self.current_target_goal = []\n",
     "        self.current_learning_groups = []\n",
     "        self.learning_targets = []\n",
+    "        sel\n",
     "        \n",
     "    def compute_batch(self, isTraining=True):\n",
     "        if isTraining:\n",
@@ -868,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -899,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -924,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -935,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -1000,11 +1021,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0.17903163264426744)\n",
+      "(1, 0.16345054522988367)\n",
+      "(2, 0.15518805630159568)\n",
+      "(3, 0.14895656557753204)\n",
+      "(4, 0.14426673219048292)\n",
+      "(5, 0.14052381672336819)\n",
+      "(6, 0.13741398164555862)\n",
+      "(7, 0.13468820802612799)\n",
+      "(8, 0.13222214666012655)\n",
+      "(9, 0.130029084559944)\n",
+      "(2880, 0.41770833333333335)\n",
+      "(2910, 0.4268041237113402)\n"
+     ]
+    }
+   ],
    "source": [
     "exp_results = []\n",
     "\n",
@@ -1019,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1027,23 +1067,22 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 0.17401368712900725),\n",
-       " (1, 0.14072583350071299),\n",
-       " (2, 0.12462031807655902),\n",
-       " (3, 0.11437517436310551),\n",
-       " (4, 0.107035268253385),\n",
-       " (5, 0.10117845601028351),\n",
-       " (6, 0.096336938713979886),\n",
-       " (7, 0.092676932742251236),\n",
-       " (8, 0.089416179639050589),\n",
-       " (9, 0.086551310462437608),\n",
-       " ('testing run', 0.13897210478135949),\n",
-       " ('training state', (2870, 0.39686411149825784)),\n",
-       " ('testing state', (2865, 0.3193717277486911)),\n",
-       " (0, 0.084750370036393866)]"
+       "[(0, 0.17903163264426744),\n",
+       " (1, 0.16345054522988367),\n",
+       " (2, 0.15518805630159568),\n",
+       " (3, 0.14895656557753204),\n",
+       " (4, 0.14426673219048292),\n",
+       " (5, 0.14052381672336819),\n",
+       " (6, 0.13741398164555862),\n",
+       " (7, 0.13468820802612799),\n",
+       " (8, 0.13222214666012655),\n",
+       " (9, 0.130029084559944),\n",
+       " ('testing run', 0.14932136950569957),\n",
+       " ('training state', (2880, 0.41770833333333335)),\n",
+       " ('testing state', (2910, 0.4268041237113402))]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
