--- a/queries exp expanded features 4.ipynb
+++ b/queries exp expanded features 4.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "Working on adding a lot of features just to see if it can get the score up regardless of how complicated or where the data is coming from\n",
     "\n",
@@ -11,7 +13,7 @@
     "* Taget given surface counts\n",
     "* words from the target and source document\n",
     "  * possible back prop into these vectors, idea is to replace tf-idf with some nn and back prop here\n",
-    "    "
+    "* using a linear layer near the output to combine the features"
    ]
   },
   {
@@ -339,20 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/scan_module/scan_perform_ext.py:135: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility\n",
-      "  from scan_perform.scan_perform import *\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class EntityVectorLinkExp(basePreProcessedQueries):\n",
     "\n",
@@ -662,7 +655,7 @@
     "        )\n",
     "\n",
     "        self.target_simple = lasagne.layers.DenseLayer(\n",
-    "            self.target_combined_feats_l,\n",
+    "            self.target_embedding_l, #self.target_combined_feats_l,\n",
     "            name='target_simple1',\n",
     "            num_units=compared_vector_size,\n",
     "            nonlinearity=lasagne.nonlinearities.linear,\n",
@@ -716,10 +709,38 @@
     "            return T.maximum(T.basic.pow(T.basic.pow(T.basic.abs_(v), 2).sum(axis=1) + .001, .5), .001)\n",
     "\n",
     "        self.res_l = self.dotted_vectors / (augNorm(self.target_out) * augNorm(self.source_aligned_l) + .001)\n",
+    "        \n",
+    "        self.res_cap = T.clip((T.tanh(self.res_l) + 1) / 2, .001, .999)\n",
+    "        \n",
+    "        #############################\n",
+    "        ## Linear features combined\n",
+    "        #############################\n",
+    "        \n",
+    "        \n",
+    "        self.linear_features_combined = lasagne.layers.concat(\n",
+    "            [lasagne.layers.InputLayer(\n",
+    "                    (None, 1), \n",
+    "                    input_var=T.tanh(self.res_l).reshape((self.res_l.shape[0], 1)),\n",
+    "                ),\n",
+    "            lasagne.layers.reshape(self.target_matched_surface_input_l, ([0],1)),\n",
+    "            self.target_matched_counts_input_l],\n",
+    "            axis=1\n",
+    "        )\n",
+    "        \n",
+    "        self.linear_features_dens_l = lasagne.layers.DenseLayer(\n",
+    "            self.linear_features_combined,\n",
+    "            nonlinearity=lasagne.nonlinearities.linear,\n",
+    "            num_units=1,\n",
+    "            name='linear_final_l',\n",
+    "        )\n",
+    "        \n",
+    "        self.linear_output = lasagne.layers.get_output(\n",
+    "            lasagne.layers.reshape(self.linear_features_dens_l, ([0],))\n",
+    "        )\n",
+    "        \n",
     "#         self.res_l = self.dotted_vectors / ((self.target_out.norm(1, axis=1) + .001) *\n",
     "#                                             (self.source_aligned_l.norm(1, axis=1) + .001))\n",
     "\n",
-    "        self.res_cap = T.clip((T.tanh(self.res_l) + 1) / 2, .001, .999)\n",
     "\n",
     "        #self.golds = self.res_cap[self.y_answer]\n",
     "\n",
@@ -734,7 +755,7 @@
     "        def setSubSelector(indx, outputs):\n",
     "            return T.set_subtensor(outputs[T.arange(indx[0], indx[1]), indx[3]], 1)\n",
     "\n",
-    "        num_target_samples = self.res_l.shape[0]\n",
+    "        num_target_samples = self.linear_output.shape[0]\n",
     "\n",
     "        select_seq = T.concatenate([\n",
     "            self.y_grouping,\n",
@@ -748,7 +769,8 @@
     "            sequences=select_seq,\n",
     "        )\n",
     "\n",
-    "        self.groupped_elems = T.dot(self.selecting_matrix[-1], T.diag(T.exp(self.res_l)))\n",
+    "        self.groupped_elems = T.dot(self.selecting_matrix[-1], \n",
+    "                                    T.diag(T.exp(T.clip((self.linear_output + 1) / 2, .001, .999 ))))\n",
     "        self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
     "        self.loss_vec = self.groupped_res - self.res_l[self.y_grouping[:,2]]\n",
     "\n",
@@ -756,7 +778,8 @@
     "            #lasagne.layers.get_all_params(self.target_dens2) +\n",
     "            # TODO: add params for the target stuff,\n",
     "            lasagne.layers.get_all_params(self.target_simple) +\n",
-    "            lasagne.layers.get_all_params(self.source_dens2)\n",
+    "            lasagne.layers.get_all_params(self.source_dens2) +\n",
+    "            lasagne.layers.get_all_params(self.linear_features_dens_l)\n",
     "            #lasagne.layers.get_all_params(self.document_dens2)\n",
     "        )\n",
     "\n",
@@ -935,6 +958,30 @@
     "\n",
     "\n",
     "queries_exp = EntityVectorLinkExp()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[1;32m/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/layers/input.py\u001b[0m(62)\u001b[0;36m__init__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m     61 \u001b[1;33m                raise ValueError(\"shape has %d dimensions, but variable has \"\n",
+      "\u001b[0m\u001b[1;32m---> 62 \u001b[1;33m                                 \"%d\" % (ndim, input_var.ndim))\n",
+      "\u001b[0m\u001b[1;32m     63 \u001b[1;33m        \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minput_var\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput_var\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "ipdb> c\n"
+     ]
+    }
+   ],
+   "source": [
+    "%debug"
    ]
   },
   {
@@ -1160,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -1169,33 +1216,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0.13668366413791538)\n",
-      "(1, 0.087837934022593975)\n",
-      "(2, 0.077523972562947463)\n",
-      "(3, 0.076900211360251533)\n",
-      "(4, 0.076663819512942849)\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-48c0e3bd9f0f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mxrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mqueries_exp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompute_batch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mexp_results\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-16-1289bf143a19>\u001b[0m in \u001b[0;36mcompute_batch\u001b[1;34m(self, isTraining, useTrainingFunc)\u001b[0m\n\u001b[0;32m    547\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlearning_targets\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mtarget_learings\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    548\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_target_id\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 549\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_batch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    550\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal_links\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_training_items\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    551\u001b[0m                     \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal_loss\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal_links\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-16-1289bf143a19>\u001b[0m in \u001b[0;36mrun_batch\u001b[1;34m(self, func)\u001b[0m\n\u001b[0;32m    561\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_surface_link\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_surface_context\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;31m#self.current_link_id,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    562\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_target_input\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_target_matches_surface\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_surface_target_counts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_target_id\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 563\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_target_goal\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_learning_groups\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    564\u001b[0m             \u001b[1;31m# self.current_target_words,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    565\u001b[0m         )\n",
-      "\u001b[1;32m/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    605\u001b[0m         \u001b[0mt0_fn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    606\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 607\u001b[1;33m             \u001b[0moutputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    608\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    609\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'position_of_error'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/gof/op.pyc\u001b[0m in \u001b[0;36mrval\u001b[1;34m(p, i, o, n)\u001b[0m\n\u001b[0;32m    758\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mctx\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mgraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mNoContext\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    759\u001b[0m             \u001b[1;31m# default arguments are stored in the closure of `rval`\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 760\u001b[1;33m             \u001b[1;32mdef\u001b[0m \u001b[0mrval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnode_input_storage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mo\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnode_output_storage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    761\u001b[0m                 \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    762\u001b[0m                 \u001b[1;32mfor\u001b[0m \u001b[0mo\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "(0, 0.12914411485359398)\n",
+      "(1, 0.11307032398501773)\n",
+      "(2, 0.11087986019368014)\n",
+      "(3, 0.10990629502160074)\n",
+      "(28318, 0.10371495162087718)\n",
+      "(28234, 0.09959623149394348)\n"
      ]
     }
    ],
    "source": [
     "exp_results = []\n",
     "\n",
-    "for i in xrange(10):\n",
+    "for i in xrange(4):\n",
     "    res = (i, queries_exp.compute_batch())\n",
     "    print res\n",
     "    exp_results.append(res)\n",
@@ -1206,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1215,8 +1248,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28318, 0.7611060103114626)\n",
-      "(28234, 0.7611390522065594)\n"
+      "(28318, 0.08740024012995268)\n",
+      "(28234, 0.08712899341219806)\n"
      ]
     }
    ],
@@ -1224,6 +1257,58 @@
     "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
     "exp_results.append(('training state', evalCurrentState(True, queries_exp.num_training_items)))\n",
     "exp_results.append(('testing state', evalCurrentState(False, queries_exp.num_training_items)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 0.10936461746311023)\n",
+      "(1, 0.1090357482384916)\n",
+      "(2, 0.10882287650253342)\n",
+      "(3, 0.10868383639710627)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in xrange(4):\n",
+    "    res = (i, queries_exp.compute_batch())\n",
+    "    print res\n",
+    "    exp_results.append(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.70157772],\n",
+       "       [-0.5749886 ],\n",
+       "       [-0.85067689],\n",
+       "       [-1.01168692],\n",
+       "       [-0.42529729],\n",
+       "       [-0.62392348]], dtype=float32)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries_exp.all_params[-2:][0].get_value(borrow=True)"
    ]
   },
   {
