somehow having the null query in there allows the system to do really well on the testing data but not as well on the training, thinking will try adding more random entries to the system to learn against

--- a/queries exp expanded features 3.ipynb
+++ b/queries exp expanded features 3.ipynb
@@ -11,6 +11,7 @@
     "* Taget given surface counts\n",
     "* words from the target and source document\n",
     "  * possible back prop into these vectors, idea is to replace tf-idf with some nn and back prop here\n",
+    "* the extra feature are going in with the target vec when approperate\n",
     "    "
    ]
   },
@@ -203,32 +204,6 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{u'hello_dolly': 1,\n",
-       " u'hello_dolly__lrb_album_rrb_': 6,\n",
-       " u'hello_dolly__lrb_film_rrb_': 91,\n",
-       " u'hello_dolly__lrb_musical_rrb_': 294,\n",
-       " u'hello_dolly__lrb_song_rrb_': 55}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "surface_counts.get('hello , dolly !')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [],
    "source": [
     "from wikireader import WikiRegexes, WikipediaReader"
@@ -236,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -328,7 +303,7 @@
        "4056055"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,20 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/scan_module/scan_perform_ext.py:135: RuntimeWarning: numpy.ndarray size changed, may indicate binary incompatibility\n",
-      "  from scan_perform.scan_perform import *\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class EntityVectorLinkExp(basePreProcessedQueries):\n",
     "\n",
@@ -812,7 +778,7 @@
     "        self.learning_targets = []\n",
     "        self.current_surface_target_counts = []\n",
     "        \n",
-    "        self.failed_match = []\n",
+    "        \n",
     "            \n",
     "    def compute_batch(self, isTraining=True, useTrainingFunc=True):\n",
     "        if isTraining and useTrainingFunc:\n",
@@ -822,6 +788,9 @@
     "        self.reset_accums()\n",
     "        self.total_links = 0\n",
     "        self.total_loss = 0.0\n",
+    "        \n",
+    "        self.failed_match = []\n",
+    "        self.failed_page_match = []\n",
     "\n",
     "        get_words = re.compile('[^a-zA-Z0-9 ]')\n",
     "        get_link = re.compile('.*?\\[(.*?)\\].*?')\n",
@@ -859,10 +828,14 @@
     "                    #cnt = self.page_content.get(WikiRegexes.convertToTitle(target))\n",
     "                    wiki_title = WikiRegexes.convertToTitle(target)\n",
     "                    cnt = self.documentvecs.get_location(wiki_title)\n",
-    "                    if cnt is None:\n",
+    "                    if cnt is None :#or wiki_title == 'nil':\n",
     "                        # were not able to find this wikipedia document\n",
     "                        # so just ignore tihs result since trying to train on it will cause\n",
     "                        # issues\n",
+    "                        # \n",
+    "                        # there are also nil queries that are generated for every document\n",
+    "                        # but we actually have a nil page that is getting referenced\n",
+    "                        # so just filter it out for now\n",
     "                        continue\n",
     "                    if isGold:\n",
     "                        target_gold_loc = len(target_inputs)\n",
@@ -871,10 +844,13 @@
     "                    target_inputs.append(cnt)  # page_content already tokenized\n",
     "                    target_matches_surface.append(int(surmatch == target.lower()))\n",
     "                    target_learings.append((targets, target))\n",
-    "                    target_match_counts.append(surcounts.get(wiki_title, 0))\n",
+    "                    tmc = surcounts.get(wiki_title, 0)\n",
+    "                    if tmc is 0:\n",
+    "                        self.failed_page_match.append((surcounts, wiki_title))\n",
+    "                    target_match_counts.append(tmc)\n",
     "                    #if wiki_title not in surcounts:\n",
     "                    #    print surcounts, wiki_title\n",
-    "                if target_gold_loc is not None or not isTraining:  # if we can't get the gold item\n",
+    "                if target_gold_loc is not -1 or not isTraining:  # if we can't get the gold item\n",
     "                    # contain the index of the gold item for these items, so it can be less then it\n",
     "                    gold_loc = (len(self.current_target_goal) + target_gold_loc)\n",
     "                    sorted_match_counts = [-4,-3,-2,-1] + sorted(set(target_match_counts))\n",
@@ -939,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -970,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -995,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1006,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1017,96 +993,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-4, -3, -2, -1, 0, 2, 3, 4, 5, 35, 4738]\n",
-      "[-4, -3, -2, -1, 0, 11]\n",
-      "[-4, -3, -2, -1, 0, 2, 6, 21, 26, 84, 199]\n",
-      "[-4, -3, -2, -1, 0, 48, 152]\n",
-      "[-4, -3, -2, -1, 0, 2212]\n",
-      "[-4, -3, -2, -1, 0, 55, 91, 294]\n",
-      "[-4, -3, -2, -1, 0, 7]\n",
-      "[-4, -3, -2, -1, 0, 11, 14, 18, 35, 72, 124, 168, 176]\n",
-      "[-4, -3, -2, -1, 0, 244]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 4, 10, 15, 20, 74, 988]\n",
-      "[-4, -3, -2, -1, 0, 360]\n",
-      "[-4, -3, -2, -1, 0, 60]\n",
-      "[-4, -3, -2, -1, 0, 1, 307]\n",
-      "[-4, -3, -2, -1, 0, 3, 4, 8, 13, 24, 26, 38, 41, 45, 47, 54, 71, 81, 199, 665]\n",
-      "[-4, -3, -2, -1, 0, 3, 5, 27, 32, 39, 40, 41, 42, 48, 64, 71, 185, 733, 20681]\n",
-      "[-4, -3, -2, -1, 0, 21, 22, 25, 31, 36, 71, 72, 77, 83, 110, 122, 171, 175, 179, 312, 419, 756]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 6, 8, 9, 73, 337, 519]\n",
-      "[-4, -3, -2, -1, 0, 1, 3, 5, 12, 21, 1076]\n",
-      "[-4, -3, -2, -1, 0, 312]\n",
-      "[-4, -3, -2, -1, 0, 379]\n",
-      "[-4, -3, -2, -1, 0, 1021]\n",
-      "[-4, -3, -2, -1, 0, 179]\n",
-      "[-4, -3, -2, -1, 0, 3, 341]\n",
-      "[-4, -3, -2, -1, 0, 5, 352]\n",
-      "[-4, -3, -2, -1, 0, 95]\n",
-      "[-4, -3, -2, -1, 0, 2, 4, 6, 7, 8, 2005]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 4, 6, 12, 13, 14, 7835]\n",
-      "[-4, -3, -2, -1, 0, 12, 13, 16, 53, 4595]\n",
-      "[-4, -3, -2, -1, 0, 55]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 5, 9, 10, 11, 12, 13, 14, 16, 19, 8224]\n",
-      "[-4, -3, -2, -1, 0, 6, 14, 15, 16, 19, 24, 29, 45, 51, 74, 83, 129, 175, 180, 265, 346, 758]\n",
-      "[-4, -3, -2, -1, 0, 1, 18, 23, 25, 30, 83, 166, 289, 686, 1813, 6300]\n",
-      "[-4, -3, -2, -1, 0, 7, 15, 32, 34, 35, 95, 106, 122, 151, 194, 328, 491, 551, 943, 1120, 1764, 104478]\n",
-      "[-4, -3, -2, -1, 0, 360]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 4, 9, 10, 307]\n",
-      "[-4, -3, -2, -1, 0, 1, 10, 19, 20, 24, 34, 39, 56, 84, 92, 247, 569, 9208]\n",
-      "[-4, -3, -2, -1, 0, 1, 13, 28, 31, 43, 88, 312, 1338, 1511]\n",
-      "[-4, -3, -2, -1, 0, 3, 4, 6, 7, 10, 11, 31, 1911]\n",
-      "[-4, -3, -2, -1, 0, 284]\n",
-      "[-4, -3, -2, -1, 0, 1, 5, 424]\n",
-      "[-4, -3, -2, -1, 0, 1]\n",
-      "[-4, -3, -2, -1, 0, 13, 36, 41, 43, 50, 55, 82, 88, 123, 129, 135, 185, 190, 240, 474, 633]\n",
-      "[-4, -3, -2, -1, 0, 7, 39, 109, 202, 236, 283, 396, 20279]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 7, 9, 14, 31, 5141]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 5, 7, 8, 10, 18, 4317]\n",
-      "[-4, -3, -2, -1, 0, 6, 7, 9, 12, 13, 15, 16, 24, 27, 38, 42, 121, 150, 152, 332, 789]\n",
-      "[-4, -3, -2, -1, 0, 7, 15, 32, 34, 35, 95, 106, 122, 151, 194, 328, 491, 551, 943, 1120, 1764, 104478]\n",
-      "[-4, -3, -2, -1, 0, 1, 13, 14, 15, 19, 25, 28, 29, 64, 86, 245, 18722]\n",
-      "[-4, -3, -2, -1, 0, 2, 3, 5, 6, 40, 77, 198, 505, 716]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 8, 12, 13, 20, 29, 47, 54, 101, 399, 41904]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 6, 11, 15, 16, 22, 51, 64, 83, 10244]\n",
-      "[-4, -3, -2, -1, 0, 28]\n",
-      "[-4, -3, -2, -1, 0, 15, 18, 21, 34, 37, 46, 55, 58, 4876]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 5, 7, 10, 13, 18, 29, 32, 52, 81, 99, 200, 1389]\n",
-      "[-4, -3, -2, -1, 0, 4, 5, 8, 11, 12, 14, 15, 26, 35, 36, 59, 70, 265, 24060]\n",
-      "[-4, -3, -2, -1, 0, 3, 8, 16, 19, 21, 22, 30, 32, 34, 66, 74, 102, 17864]\n",
-      "[-4, -3, -2, -1, 0]\n",
-      "[-4, -3, -2, -1, 0, 2, 4, 1636]\n",
-      "[-4, -3, -2, -1, 0, 12, 31, 40, 41, 54, 69, 87, 110, 115, 124, 162, 169, 186, 247, 392, 414, 598, 845]\n",
-      "[-4, -3, -2, -1, 0, 2, 7, 15, 21, 23, 24, 29, 72, 82, 146, 160, 195, 217, 251, 273, 705, 725, 80173]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 8, 10, 23]\n",
-      "[-4, -3, -2, -1, 0, 223]\n",
-      "[-4, -3, -2, -1, 0, 223]\n",
-      "[-4, -3, -2, -1, 0, 1, 292]\n",
-      "[-4, -3, -2, -1, 0, 28]\n",
-      "[-4, -3, -2, -1, 0, 1, 258]\n",
-      "[-4, -3, -2, -1, 0, 5, 10, 23, 26, 29, 32, 33, 35, 106, 134, 212, 4348]\n",
-      "[-4, -3, -2, -1, 0, 9]\n",
-      "[-4, -3, -2, -1, 0, 1, 643]\n",
-      "[-4, -3, -2, -1, 0, 136]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 4, 5, 7, 32, 102, 103]\n",
-      "[-4, -3, -2, -1, 0, 2, 5, 10, 11, 15, 46, 47, 498, 544]\n",
-      "[-4, -3, -2, -1, 0, 2, 5, 10, 11, 15, 46, 47, 498, 544]\n",
-      "[-4, -3, -2, -1, 0, 1, 2, 3, 6, 7, 9, 1835]\n",
-      "[-4, -3, -2, -1, 0, 1, 5, 6, 12, 1545]\n",
-      "[-4, -3, -2, -1, 0, 36]\n",
-      "[-4, -3, -2, -1, 0, 10, 406]\n",
-      "[-4, -3, -2, -1, 0, 3, 7, 17, 27, 34, 39, 59, 73]\n",
-      "None\n",
-      "CPU times: user 60.2 ms, sys: 6.37 ms, total: 66.5 ms\n",
-      "Wall time: 47.8 ms\n"
+      "0.174694755739\n",
+      "CPU times: user 5min 1s, sys: 1.62 s, total: 5min 3s\n",
+      "Wall time: 41.3 s\n"
      ]
     }
    ],
@@ -1168,13 +1066,85 @@
    "source": [
     "exp_results = []\n",
     "\n",
-    "for i in xrange(10):\n",
+    "for i in xrange(5):\n",
     "    res = (i, queries_exp.compute_batch())\n",
     "    print res\n",
     "    exp_results.append(res)\n",
     "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
     "exp_results.append(('training state', evalCurrentState(True, queries_exp.num_training_items)))\n",
     "exp_results.append(('testing state', evalCurrentState(False, queries_exp.num_training_items)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(target_simple1.W, True),\n",
+       " (target_simple1.b, True),\n",
+       " (surface_cxt_conv1.W, True),\n",
+       " (surface_cxt_conv1.b, True),\n",
+       " (surface_conv1.W, True),\n",
+       " (surface_conv1.b, True),\n",
+       " (surface_dens1.W, True),\n",
+       " (surface_dens1.b, True),\n",
+       " (source_dens1.W, True),\n",
+       " (source_dens1.b, True),\n",
+       " (source_dens12.W, True),\n",
+       " (source_dens12.b, True),\n",
+       " (source_dens2.W, True),\n",
+       " (source_dens2.b, True)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(p, np.isnan(p.get_value(borrow=True)).any()) for p in queries_exp.all_params]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[u'pachinko sexy reaction 2',\n",
+       " u'16th-century',\n",
+       " u'santiago ram n y cajal ,',\n",
+       " u'abul-faraj ibn al-jawzi',\n",
+       " u'abul-faraj ibn al-jawzi',\n",
+       " u'abu muhammad ibn hazm',\n",
+       " u\"hmcs '' cayuga ''\",\n",
+       " u\"hmcs '' athabaskan ''\",\n",
+       " u\"seychellois creole -lrb- '' kreol\",\n",
+       " u'33 bce',\n",
+       " u'dactylic hexameters',\n",
+       " u\"'' zembla ''\",\n",
+       " u'rebecca ray',\n",
+       " u'weekending',\n",
+       " u'weekending',\n",
+       " u'edward wiley']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries_exp.failed_match"
    ]
   },
   {
