--- a/queries exp expanded features 3.ipynb
+++ b/queries exp expanded features 3.ipynb
@@ -1,8 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "Working on adding a lot of features just to see if it can get the score up regardless of how complicated or where the data is coming from\n",
     "\n",
@@ -1073,6 +1077,35 @@
     "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
     "exp_results.append(('training state', evalCurrentState(True, queries_exp.num_training_items)))\n",
     "exp_results.append(('testing state', evalCurrentState(False, queries_exp.num_training_items)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0.13412095478504968),\n",
+       " (1, 0.08384761093081565),\n",
+       " (2, 0.075165537455837886),\n",
+       " (3, 0.074463398532355854),\n",
+       " (4, 0.074139625877423787),\n",
+       " ('testing run', 0.077500098314125229),\n",
+       " ('training state', (28229, 0.39268128520315987)),\n",
+       " ('testing state', (28313, 0.7650902412319429))]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_results"
    ]
   },
   {
