--- a/queries exp expanded features 3.ipynb
+++ b/queries exp expanded features 3.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "Working on adding a lot of features just to see if it can get the score up regardless of how complicated or where the data is coming from\n",
     "\n",
@@ -21,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -58,6 +56,7 @@
     "from wordvecs import WordVectors, EmbeddingLayer, WordTokenizer\n",
     "import json\n",
     "import re\n",
+    "import random\n",
     "\n",
     "theano.config.floatX = 'float32'\n",
     "#theano.config.linker = 'cvm_nogc'\n",
@@ -824,7 +823,7 @@
     "                target_match_counts = []\n",
     "                target_gold_loc = -1\n",
     "                target_group_start = len(self.current_target_input)\n",
-    "                for target in targets['vals'].keys():\n",
+    "                for target in targets['vals'].keys() + random.sample(self.documentvecs.reverse_word_location, 3):\n",
     "                    # skip the items that we don't know the gold for\n",
     "                    if not targets['gold'] and isTraining:\n",
     "                        continue\n",
