removing null form the set of queries seems to hurt the system a lot, going to add it back in. some issue with easy queries basically getting narrowed down to two items with the same score

--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -1,5 +1,26 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print 'test'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 0
